# gapfill

./: .gitignore  CLAUDE.md  LICENSE  PHILOSOPHY.md  PHILOSOPHY_zh.md  README.md  README_zh.md  ROADMAP.md  ROADMAP_zh.md  auto-mode-fallback-analysis.md  pyproject.toml
.claude/: settings.local.json
docs/: feasibility-report.md  glossary.md
docs/superpowers/plans/: 2026-05-22-aidev-init-mvp.md
docs/superpowers/specs/: 2026-05-22-aidev-init-design.md
scripts/: init.py  scan.py  stack_claude_md.py  stack_md.py
skills/gapfill/: SKILL.md  SKILL.zh.md
skills/gapfill/scripts/: review.py  stack_claude_md.py  stack_md.py  sync.py
skills/gapfill/src/gapfill/: __main__.py  utils.py
skills/gapfill/src/gapfill/commands/: __init__.py  init.py  review.py  scan.py  stack_claude_md.py  stack_md.py  sync.py
skills/gapfill/src/gapfill/templates/: claude-generic-zh.md  claude-react-zh.md  claude-react.md  claude-spring-boot.md  env_info.txt  gitignore  readme.md  settings.json
src/aidev/: __init__.py  __main__.py  utils.py
src/aidev/commands/: init.py
src/aidev/templates/: claude.md  gitignore
src/gapfill/: __init__.py  __main__.py  constants.py  utils.py
src/gapfill/commands/: __init__.py  init.py  review.py  stack_claude_md.py  stack_md.py
src/gapfill/templates/: __init__.py  claude-generic.md  claude-spring-boot-zh.md  claude-spring-boot.md  env_info_zh.txt  readme.md  settings.json
tests/: test_init.py  test_review.py  test_scan.py  test_stack_md.py  test_sync.py  test_utils.py
